# SubSleuth

./: .gitignore  README.md  config.json  pyproject.toml  subsleuth.py
.github/workflows/: deploy-pages.yml  tests.yml
subsleuth-pages/: README.md  index.html  subsleuth.css  subsleuth.js
tests/: test_browser_assets.py  test_subsleuth.py
